<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccesBuyAct"
    android:background="@color/bgPrimary">

    <ImageView
        android:id="@+id/ic_success_buy"
        android:layout_width="287dp"
        android:layout_height="330dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon_success_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/header_succes_buy"
        android:textColor="@color/blackPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_success_buy" />

    <TextView
        android:id="@+id/subheader_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/sub_header_succes_buy"
        android:textAlignment="center"
        android:textColor="@color/greySecondry"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_buy" />

    <Button
        android:id="@+id/btn_view_ticket"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_greenprimary"
        android:fontFamily="@font/mmedium"
        android:text="@string/view_ticket"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheader_buy" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_whiteprimary"
        android:fontFamily="@font/mmedium"
        android:text="@string/my_dashboard"
        android:textColor="@color/greyPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_ticket" />

</androidx.constraintlayout.widget.ConstraintLayout>