<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccesRegisterAct"
    android:background="@color/bgPrimary">

    <ImageView
        android:id="@+id/ic_success_signup"
        android:src="@drawable/icon_success_signup"
        android:layout_width="287dp"
        android:layout_height="330dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/header_kamu_hebat"
        android:textColor="@color/blackPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_success_signup" />

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/sub_header_kamu_hebat"
        android:textAlignment="center"
        android:textColor="@color/greySecondry"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/btn_explore"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_greenprimary"
        android:fontFamily="@font/mmedium"
        android:text="@string/explore_label"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheader" />

</androidx.constraintlayout.widget.ConstraintLayout>