<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterOneAct">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/orangePrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mregular"
        android:text="@string/create_account"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/sub_header_create_account"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_whiteprimary"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/greySecondry"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/greySecondry"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/email_label"
                android:textColor="@color/greySecondry"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/btn_back_one"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_btn_whiteprimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_continue_two"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_continue_one"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:background="@drawable/bg_btn_greenprimary"
            android:fontFamily="@font/mmedium"
            android:text="@string/continue_label"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>