<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orangePrimary"
    tools:context=".SignInAct">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="152dp"
        android:layout_height="117dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_whiteprimary"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/greySecondry"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/usernameku"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/greySecondry"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordku"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_btn_greenprimary"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="20sp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/txt_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mlight"
        android:text="@string/create_account"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>