<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileAct"
    android:background="@color/bgPrimary">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/orangePrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mregular"
                android:text="@string/edit_profile"
                android:textColor="#FFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="9dp"
                android:text="@string/sub_header_edit_profile"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_btn_whiteprimary"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/nama_depan_label"
                        android:textColor="@color/greySecondry"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xnama_depan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/nama_belakang_label"
                        android:textColor="@color/greySecondry"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xnama_belakang"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/passion_label"
                    android:textColor="@color/greySecondry"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/xpassion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username_label"
                        android:textColor="@color/greySecondry"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xusername"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password_label"
                        android:textColor="@color/greySecondry"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xpassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/email_label"
                        android:textColor="@color/greySecondry"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/xemail_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/mmedium"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>




            </LinearLayout>

            <View
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginTop="185dp"
                android:background="@drawable/bg_view_circle_pict"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="194dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/photo_edit_profile"
                    android:layout_width="90dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_nopic"/>

            </com.github.florent37.shapeofview.shapes.CircleView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:id="@+id/btn_back"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/bg_btn_whiteprimary"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/btn_continue_two"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_back" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="240dp"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_btn_greenprimary"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/save_profile"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_new_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="255dp"
                android:background="@drawable/bg_btn_circle_green"
                android:fontFamily="@font/mmedium"
                android:text="+"
                android:textColor="#FFF"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>